force-app/main/default/objects/Account/fields/Company_SIC_Code_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Company_SIC_Code_Cognism__c</fullName>
    <label>Company SIC Code (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>