force-app/main/default/objects/Account/fields/Company_Website_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Company_Website_Cognism__c</fullName>
    <label>Company Website (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>