force-app/main/default/objects/Account/fields/Company_Year_Founded_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Company_Year_Founded_Cognism__c</fullName>
    <label>Company Year Founded (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>