force-app/main/default/objects/Account/fields/Compliance_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Approval_Date__c</fullName>
    <label>Compliance Approval Date</label>
    <type>Date</type>
</CustomField>