force-app/main/default/objects/Account/fields/Contact_Created_From_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Created_From_Id__c</fullName>
    <label>Contact Created From Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>