force-app/main/default/objects/Account/fields/Contract_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Opt_Out_Date__c</fullName>
    <description>The last date on which we can opt out of the current contract or the date it terminates</description>
    <inlineHelpText>The last date on which we can opt out of the current contract or the date it terminates</inlineHelpText>
    <label>Contract Opt Out Date</label>
    <type>Date</type>
</CustomField>