force-app/main/default/objects/Account/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <inlineHelpText>Is this Account currently under Contract?</inlineHelpText>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, under contract</fullName>
            </value>
            <value>
                <fullName>No, not under contract</fullName>
            </value>
            <value>
                <fullName>Terminated by Customer</fullName>
            </value>
            <value>
                <fullName>Terminated by Circle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>