force-app/main/default/objects/Account/fields/Core_API__c.field-meta.xml
<CustomField>
    <fullName>Core_API__c</fullName>
    <formula>IF( Core_API_Number__c &gt;0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Does this customer have the Core API?</inlineHelpText>
    <label>Core API</label>
    <type>Checkbox</type>
</CustomField>