force-app/main/default/objects/Account/fields/Core_API_Number__c.field-meta.xml
<CustomField>
    <fullName>Core_API_Number__c</fullName>
    <label>Core API Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>