force-app/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Master Country field that is populated via data enrichment tools.</description>
    <inlineHelpText>Corporate Headquarters, populated via data enrichment tools.If null, this field can be populated manually to map account to region.</inlineHelpText>
    <label>HQ Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_of_Incorporation</valueSetName>
    </valueSet>
</CustomField>