force-app/main/default/objects/Account/fields/Country_Principal_Place_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Country_Principal_Place_of_Business__c</fullName>
    <label>Country Principal Place of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>