force-app/main/default/objects/Account/fields/Current_Daily_USDC_Limit__c.field-meta.xml
<CustomField>
    <fullName>Current_Daily_USDC_Limit__c</fullName>
    <description>The lendee&apos;s daily limit</description>
    <inlineHelpText>Enter the mutual client&apos;s daily USDC limit.</inlineHelpText>
    <label>Current Daily USDC Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>