force-app/main/default/objects/Account/fields/Customer_ID_Old__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_Old__c</fullName>
    <description>Cybavo Customer ID</description>
    <inlineHelpText>Cybavo Customer ID</inlineHelpText>
    <label>Customer ID (Old)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>