force-app/main/default/objects/Account/fields/Customer_Off_Board_Review_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Customer_Off_Board_Review_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify an at-risk customer</description>
    <label>Customer Off-Board Review In Progress</label>
    <type>Checkbox</type>
</CustomField>