force-app/main/default/objects/Account/fields/Customer_platform__c.field-meta.xml
<CustomField>
    <fullName>Customer_platform__c</fullName>
    <label>Customer Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Platform</fullName>
            </value>
            <value>
                <fullName>New Build</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>