force-app/main/default/objects/Account/fields/Cybavo__c.field-meta.xml
<CustomField>
    <fullName>Cybavo__c</fullName>
    <description>Used to identify the type of Cybavo product the customer has.</description>
    <inlineHelpText>Select which Cybavo product the customer has purchased.</inlineHelpText>
    <label>Cybavo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cybavo VAULT</fullName>
            </value>
            <value>
                <fullName>Cybavo Cashflow Manager</fullName>
            </value>
            <value>
                <fullName>Cybavo Wallet SDK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>