force-app/main/default/objects/Account/fields/CYBAVO_Signing_Entity__c.field-meta.xml
<CustomField>
    <fullName>CYBAVO_Signing_Entity__c</fullName>
    <label>CYBAVO Signing Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PTE</fullName>
            </value>
            <value>
                <fullName>INC</fullName>
            </value>
            <value>
                <fullName>S.A.R.L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>