force-app/main/default/objects/Account/fields/Date_of_Alliance_Program_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Alliance_Program_Approval__c</fullName>
    <label>Date of Alliance Program Approval</label>
    <type>Date</type>
</CustomField>