force-app/main/default/objects/Account/fields/Date_of_Alliance_Program_Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Alliance_Program_Form_Submission__c</fullName>
    <label>Date of Alliance Program Form Submission</label>
    <type>Date</type>
</CustomField>