force-app/main/default/objects/Account/fields/Date_of_Business_Dev_Owner_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Business_Dev_Owner_Assignment__c</fullName>
    <label>Date of Business Dev Owner Assignment</label>
    <type>Date</type>
</CustomField>