force-app/main/default/objects/Account/fields/Date_of_Circle_Account_Form_1_Submission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Circle_Account_Form_1_Submission__c</fullName>
    <label>Date of Circle Mint Form 1 Submission</label>
    <type>Date</type>
</CustomField>