force-app/main/default/objects/Account/fields/Date_Yield_Relationship_Mgr_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Yield_Relationship_Mgr_Assigned__c</fullName>
    <label>Date Yield Relationship Mgr Assigned</label>
    <type>Date</type>
</CustomField>