force-app/main/default/objects/Account/fields/Deal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deal_Amount__c</fullName>
    <label>Deal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>