force-app/main/default/objects/Account/fields/Deposit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Limit__c</fullName>
    <label>Deposit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>