force-app/main/default/objects/Account/fields/Deposit_Limit_Payments__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Limit_Payments__c</fullName>
    <label>Deposit Limit Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>