force-app/main/default/objects/Account/fields/Describe_Business_Revenue_Model__c.field-meta.xml
<CustomField>
    <fullName>Describe_Business_Revenue_Model__c</fullName>
    <label>Describe Business/Revenue Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>