force-app/main/default/objects/Account/fields/Duplicate_Account__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Salesforce Admin field to mark any account that&apos;s duplicated</inlineHelpText>
    <label>Duplicate Account</label>
    <type>Checkbox</type>
</CustomField>