force-app/main/default/objects/Account/fields/Exceptional_Contract_Terms_and_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Contract_Terms_and_Pricing__c</fullName>
    <inlineHelpText>Link to Contract Terms and Pricing</inlineHelpText>
    <label>Exceptional Contract Terms and Pricing</label>
    <type>Url</type>
</CustomField>