force-app/main/default/objects/Account/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <description>Short summary of the strategic importance of this partner. Be sure to include a realistic description of what success looks like and how we plan to achieve success.</description>
    <inlineHelpText>Short summary of the strategic importance of this partner. Be sure to include a realistic description of what success looks like and how we plan to achieve success.</inlineHelpText>
    <label>Executive Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>