force-app/main/default/objects/Account/fields/Existing_Platform_or_New_Build__c.field-meta.xml
<CustomField>
    <fullName>Existing_Platform_or_New_Build__c</fullName>
    <label>Existing Platform or New Build?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Platform</fullName>
            </value>
            <value>
                <fullName>New Build</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>