force-app/main/default/objects/Account/fields/GD_Agreements__c.field-meta.xml
<CustomField>
    <fullName>GD_Agreements__c</fullName>
    <label>GD Agreements</label>
    <type>Url</type>
</CustomField>