force-app/main/default/objects/Account/fields/Government_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Government_Initiatives__c</fullName>
    <description>Do they support any government initiatives as it pertains to crypto projects? If answer = yes, require additional context in an open text field (Govt Initiatives Notes)</description>
    <inlineHelpText>Do they support any government initiatives as it pertains to crypto projects?</inlineHelpText>
    <label>Government Initiatives</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>