force-app/main/default/objects/Account/fields/Handoff_to_Platform_AE__c.field-meta.xml
<CustomField>
    <fullName>Handoff_to_Platform_AE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handoff to Platform AE?</label>
    <type>Checkbox</type>
</CustomField>