force-app/main/default/objects/Account/fields/Headcount_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Headcount_Cognism__c</fullName>
    <label>Headcount (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>