force-app/main/default/objects/Account/fields/HQ_Country_DNU__c.field-meta.xml
<CustomField>
    <fullName>HQ_Country_DNU__c</fullName>
    <label>HQ Country_DNU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>