force-app/main/default/objects/Account/fields/Hubspot_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>Hubspot Account Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>