force-app/main/default/objects/Account/fields/Ideal_Customer_Profile_Tier__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Customer_Profile_Tier__c</fullName>
    <description>Used to tier customers</description>
    <label>Ideal Customer Profile Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>