force-app/main/default/objects/Account/fields/Industry_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Industry_Cognism__c</fullName>
    <label>Industry (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>