force-app/main/default/objects/Account/fields/Interested_in_Circle_Ventures__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Circle_Ventures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Circle Ventures</label>
    <type>Checkbox</type>
</CustomField>