force-app/main/default/objects/Account/fields/KPI_Growth__c.field-meta.xml
<CustomField>
    <fullName>KPI_Growth__c</fullName>
    <label>KPI Growth</label>
    <type>TextArea</type>
</CustomField>