force-app/main/default/objects/Account/fields/Last_30_Day_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Last_30_Day_Metrics__c</fullName>
    <label>Last 30 Day Metrics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>