force-app/main/default/objects/Account/fields/Last_Distro_Route_CP__c.field-meta.xml
<CustomField>
    <fullName>Last_Distro_Route_CP__c</fullName>
    <description>logs the most recent date/time of a router for distro</description>
    <inlineHelpText>logs the most recent date/time of a router for distro</inlineHelpText>
    <label>Last Distro Route CP</label>
    <type>DateTime</type>
</CustomField>