force-app/main/default/objects/Account/fields/Last_NPS_survey_comment__c.field-meta.xml
<CustomField>
    <fullName>Last_NPS_survey_comment__c</fullName>
    <label>Last NPS Survey Comment</label>
    <type>TextArea</type>
</CustomField>