force-app/main/default/objects/Account/fields/Last_NPS_survey_date__c.field-meta.xml
<CustomField>
    <fullName>Last_NPS_survey_date__c</fullName>
    <label>Last NPS Survey Date</label>
    <type>Date</type>
</CustomField>