force-app/main/default/objects/Account/fields/Launch_Status__c.field-meta.xml
<CustomField>
    <fullName>Launch_Status__c</fullName>
    <label>Launch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Pre-Launch</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>