force-app/main/default/objects/Account/fields/LeadGenius_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>LeadGenius_Last_Updated__c</fullName>
    <label>LeadGenius Last Updated</label>
    <type>DateTime</type>
</CustomField>