force-app/main/default/objects/Account/fields/Liquidity_Coverage_Banking_Partner__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Coverage_Banking_Partner__c</fullName>
    <label>Liquidity Coverage Banking Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>