force-app/main/default/objects/Account/fields/Liquidity_Coverage_Deal__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Coverage_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Liquidity Coverage Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>