force-app/main/default/objects/Account/fields/Liquidity_Coverage_Partner_Category__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Coverage_Partner_Category__c</fullName>
    <label>Liquidity Coverage Partner Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>Market Maker</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Crypto as a Service</fullName>
            </value>
            <value>
                <fullName>On/Off Ramp</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CaaS</fullName>
                <isActive>false</isActive>
                <label>CaaS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>