force-app/main/default/objects/Account/fields/Liquidity_Coverage_USDC_Source__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Coverage_USDC_Source__c</fullName>
    <label>Liquidity Coverage USDC Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Circle Mint</fullName>
            </value>
            <value>
                <fullName>Secondary Market</fullName>
            </value>
            <value>
                <fullName>Wholesale Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>