force-app/main/default/objects/Account/fields/Liquidity_Partner_Onboarding_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Partner_Onboarding_Requirement__c</fullName>
    <label>Liquidity Partner Onboarding Requirement</label>
    <type>Url</type>
</CustomField>