force-app/main/default/objects/Account/fields/Logged_in_BD__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_BD__c</fullName>
    <description>Allow the BD to see only the Accounts that they are assigned to. This is a hidden field only used for reports and dashboards.</description>
    <formula>IF(  Business_Development_Owner__r.Id = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in BD</label>
    <type>Checkbox</type>
</CustomField>