force-app/main/default/objects/Account/fields/Master_Record__c.field-meta.xml
<CustomField>
    <fullName>Master_Record__c</fullName>
    <description>Formula field based on Data Hygiene Score. Used to flag Accounts that are RevOps approved in terms of data quality.</description>
    <formula>IF(Account_Score__c &gt;= 186, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>RevOps approved Account based on amount of data input onto record</inlineHelpText>
    <label>Master Record</label>
    <type>Checkbox</type>
</CustomField>