force-app/main/default/objects/Account/fields/Metronome_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Metronome_Customer_ID__c</fullName>
    <label>Metronome Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>