force-app/main/default/objects/Account/fields/Mint_Partner_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Mint_Partner_Referrer__c</fullName>
    <description>This field is used to track incoming referrals from existing partners for Circle Mint Accounts.</description>
    <inlineHelpText>This field is used to track incoming referrals from existing partners for Circle Mint Accounts.</inlineHelpText>
    <label>Mint Partner Referrer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airtm</fullName>
            </value>
            <value>
                <fullName>Fireblocks</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Qredo</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>