force-app/main/default/objects/Account/fields/Monthly_Avg_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Avg_Metrics__c</fullName>
    <label>Monthly Avg Metrics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>