force-app/main/default/objects/Account/fields/Monthly_Payments_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payments_Volume__c</fullName>
    <label>Monthly Payments Volume</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>We&apos;re just getting started</fullName>
            </value>
            <value>
                <fullName>Under $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000 - $100,000</fullName>
            </value>
            <value>
                <fullName>$100,000 - $500,000</fullName>
            </value>
            <value>
                <fullName>Under $500,000</fullName>
            </value>
            <value>
                <fullName>$500,000 - $5,000,000</fullName>
            </value>
            <value>
                <fullName>More than $500,000</fullName>
            </value>
            <value>
                <fullName>More than $5,000,000</fullName>
            </value>
            <value>
                <fullName>I just want help setting up my Circle Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>