force-app/main/default/objects/Account/fields/Monthly_Trading_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Trading_Volume__c</fullName>
    <label>Monthly Trading Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>