force-app/main/default/objects/Account/fields/Monthly_USDC_trading_volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_USDC_trading_volume__c</fullName>
    <label>Monthly USDC Trading Volume</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;$3MM</fullName>
            </value>
            <value>
                <fullName>$3MM</fullName>
            </value>
            <value>
                <fullName>$5MM</fullName>
            </value>
            <value>
                <fullName>$10MM</fullName>
            </value>
            <value>
                <fullName>&gt;$10MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>