force-app/main/default/objects/Account/fields/Most_Recent_Note_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Note_Updated_Date__c</fullName>
    <label>Most Recent Note Updated Date</label>
    <type>DateTime</type>
</CustomField>