force-app/main/default/objects/Account/fields/Most_Recent_Notes__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Notes__c</fullName>
    <label>Most Recent Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>