force-app/main/default/objects/Account/fields/Most_Recent_Notes_History__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Notes_History__c</fullName>
    <label>Most Recent Notes History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>