force-app/main/default/objects/Account/fields/Name_Equals_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Name_Equals_Legal_Entity__c</fullName>
    <formula>Name = Legal_Entity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Equals Legal Entity</label>
    <type>Checkbox</type>
</CustomField>